--- a/style.css
+++ b/style.css
@@ -71,3 +71,57 @@ header {
     display: flex;
     justify-content: space-between;
   }
+  .input-card {
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid rgb(34, 34, 34);
+    border-radius: 8px;
+  }
+  
+  .input-card p {
+    margin-top: 10px;
+  }
+  
+  .input-card div {
+    margin-top: 10px;
+  }
+  
+  input {
+    height: 40px;
+    width: 200px;
+    outline: none;
+    padding: 10px;
+    border-radius: 4px;
+    border: none;
+  }
+  button {
+    height: 40px;
+    padding: 10px;
+    font-family: "Comfortaa", cursive;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    transition: all ease-in-out 100ms;
+  }
+  
+  button:active {
+    transform: scale(0.95);
+  }
+  
+  .bg-green {
+    background: #848add;
+  }
+  
+  .bg-green:hover {
+    background: #8f208f;
+  }
+  
+  .bg-red {
+    background-color: #eed876;
+  }
+  
+  .bg-red:hover {
+    background-color: #b8447a;
+  }
